Back end of Springboot-vuejs cruddemo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+#H2 database properties
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.initialization-mode=always
+#spring.datasource.continue-on-error=true
+
+#For mySQL properties
+spring.datasource.url=jdbc:mysql://localhost:3306/cruddemo
+spring.datasource.username=reshma
+spring.datasource.password=test123
+spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
+
+#Min and max properties for user entity
+cruddemo.minUserId=6
+cruddemo.maxUserId=30
+cruddemo.minpwd=8
+cruddemo.maxpwd=15
+cruddemo.minname=1
+cruddemo.maxname=50
+cruddemo.minEmail=1
+cruddemo.maxEmail=64
+cruddemo.maxAddress=250
+cruddemo.minAddress=1
+
+spring.jpa.properties.javax.persistence.validation.mode=none
 
